# pyfglt

./: .gitignore  404.html  CITATION.cff  README.md  index.html  meson.build  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
docs/: api.md  index.md
docs/tutorial/: 01-getting-started.qmd  02-graphlet-based-network-properties.qmd  _quarto.yml
pyfglt/: __init__.py  fglt.py  meson.build  pybind_fglt.cpp
search/: search_index.json
subprojects/: fglt.wrap
subprojects/packagefiles/: disable_install.patch
tests/: test_pyfglt.py
tutorial/: 02-graphlet-based-network-properties.qmd
tutorial/01-getting-started/: index.html
tutorial/02-graphlet-based-network-properties/: index.html
