[project]
name = "pyfglt"
version = "0.1"
description = "Python package/wrapper of Fast Graphlet Transform"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Dimitris Floros"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/fcdimitr/pyfglt"
Changelog = "https://github.com/fcdimitr/pyfglt/releases"
Issues = "https://github.com/fcdimitr/pyfglt/issues"
CI = "https://github.com/fcdimitr/pyfglt/actions"


[project.optional-dependencies]
test = ["pytest"]
