[project]
name = "pyfglt"
version = "0.1.1"
description = "Python package/wrapper of Fast Graphlet Transform"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Dimitris Floros"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "numpy >= 1.19.5",
    "scipy >= 1.7.3",
    "nextprod >= 1.0",
    "pandas==2.2.3"
]


[build-system]
requires = [
  "wheel", # python package distribution lib.
  "meson>=1.1.0", # meson buildsystem
  'meson-python>=0.12.1', # meson to pip adapter
  "pybind11>=2.10.4", # c++ to Python binding
  "ninja>=1.11.1", # build tool for meson to use
]
build-backend = 'mesonpy'


[project.urls]
Homepage = "https://github.com/fcdimitr/pyfglt"
Changelog = "https://github.com/fcdimitr/pyfglt/releases"
Issues = "https://github.com/fcdimitr/pyfglt/issues"
CI = "https://github.com/fcdimitr/pyfglt/actions"
Documentation = "https://fcdimitr.github.io/pyfglt/"


[project.optional-dependencies]
test = ["pytest"]
docs = [
    "mkdocs-material>=9.5.50",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.13.0",
  ]